--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <div class="mainbar-wrap">
         <div class="mainbar-center">
           <div class="mainbar-item"><a class="intro-link">Intro</a></div>
-          <div class="mainbar-item"><a class="getit-link">Get it</a></div>
+          <div class="mainbar-item"><a class="getit-link">Download</a></div>
+          <div class="mainbar-item"><a href="https://github.com/dariuszsikorski/Csstetic/tree/master/dist" class="docs-link"><i class="fa fa-github" aria-hidden="true"></i> Github</a></div>
           <div class="mainbar-item"><a href="./docs" class="docs-link">Docs <span class="ion-ios-arrow-thin-right icon"></span></a></div>
         </div>
         <div class="mainbar-right">
@@ -30,7 +31,7 @@
       <h3 class="hidden">Description</h3>
       <div class="content">
         <div class="subsection">
-          <p>Csstetic is a set of code snippets which joined together solve common <a href="https://en.wikipedia.org/wiki/User_interface">ui design</a> tasks. It does not "reset" or overwrite project's styling, that makes it easy to use with any existing framework or as a standalone tool. For rapid prototyping <strong>Classic</strong> <i><small>(precompiled css)</small></i> version should be enough, while <strong>Semantic</strong> <i><small>(scss mixins)</small></i> may require two more clicks and results in clean <i><small>(semantic)</small></i> html code. In fact - Both versions can be used together.</p>
+          <p>Csstetic is a set of code snippets which joined together solve common <a href="https://en.wikipedia.org/wiki/User_interface">ui design</a> tasks. It does not "reset" or overwrite project's styling, that makes it easy to use with any existing framework or as a standalone tool. For rapid prototyping <strong>Classic</strong> <i><small>(compiled css)</small></i> version should be enough, while <strong>Semantic</strong> <i><small>(scss mixins)</small></i> require any sass compiler and results in clean <i><small>(semantic)</small></i> html code.</p>
         </div>
       </div>
     </section>
@@ -38,8 +39,9 @@
       <div class="content">
         <h3>Comparison</h3>
         <div class="difference-paragraph">
-          <p><strong>Classic</strong> version uses simmilar syntax to other common css frameworks:</p><code>&lt;span class=&quot;fw-button fw-size-md fw-bg-red&quot;&gt;button&lt;/span&gt;
-</code>
+          <p><strong>Classic</strong> version uses simmilar syntax to other common css frameworks:</p><code>
+            &lt;span class=&quot;fw-button fw-size-md fw-bg-red&quot;&gt;button&lt;/span&gt;
+            </code>
           <p><strong>Semantic</strong> version moves all the styling back to scss file:</p>
           <pre><code>Html:
 &lt;span&gt;button&lt;/span&gt;
@@ -73,7 +75,7 @@ span {
               <p>Free</p>
             </div>
             <div class="col">
-              <p><small>$</small>19</p>
+              <p>Free</p>
             </div>
             <div class="col">
               <p>Classic version is one variant of compiled Csstetic, all the goodies available through mixins and functions come with Semantic version.</p>
@@ -168,13 +170,13 @@ span {
               <p>License</p>
             </div>
             <div class="col">
-              <p><a href="./license-classic.html">CC4 License</a></p>
+              <p><a href="./license.html">MIT</a></p>
             </div>
             <div class="col">
-              <p><a href="license-semantic.html">Custom License</a></p>
+              <p><a href="./license.html">MIT</a></p>
             </div>
             <div class="col">
-              <p>Both versions give you as much freedom as possible in personal and commercial use. However semantic version is paid and has some restrictions. By buying this project you support it's developers and may expect product updates in future.</p>
+              <p>Both versions give you as much freedom as possible in personal and commercial use.</p>
             </div>
           </div>
         </div>
@@ -236,21 +238,15 @@ span {
         </div>
       </div>
     </section>
-    <section class="discussit reveal">
-      <div class="content">
-        <h3>Discuss it</h3>
-        <div class="button discuss-btn">
-          <p class="link"><a href="./discuss.html"><i class="material-icons">comment</i><span class="ion-ios-arrow-thin-right icon"></span></a></p>
-        </div>
-      </div>
-    </section>
+    
+    
     <section id="get" class="getit">
       <div class="content">
-        <h3>Get it</h3>
+        <h3>Download</h3>
         <div class="get-versions">
           <div class="get-row">
-            <div class="get-col"><a href="./download/download-latest.php" class="button classic">Classic <small>(Css)</small><span class="label">free</span></a></div>
-            <div class="get-col"><a href="https://gumroad.com/l/OuSa" class="button semantic">Semantic <small>(Scss)</small><span class="label"><small>$</small>19</span></a></div>
+            <div class="get-col"><a href="./download/download-latest-css.php" class="button classic">Classic <small>(Css)</small><span class="label">free</span></a></div>
+            <div class="get-col"><a href="./download/download-latest-scss.php" class="button semantic">Semantic <small>(Scss)</small><span class="label">free</span></a></div>
           </div>
           <p class="install"><a href="./docs#installation">Getting started <span class="ion-ios-arrow-thin-right icon"></span></a><br><br><br></p>
           <p class="fw-text-center fw-block fw-txt-grey-500">Packages include <strong>press kit</strong> images.</p>
@@ -260,7 +256,7 @@ span {
     <section class="footer reveal">
       <h3 class="hidden">Footer</h3>
       <div class="content">
-        <p>&copy;<span class="current-year">2016</span> Csstetic.com <span class="divider">|</span> <a class="author" href="http://prettyminimal.com/">Pretty Minimal</a></p>
+        <p>&copy;<span class="current-year">2016 - current</span> Csstetic.com <span class="divider">|</span> <a class="author" href="http://prettyminimal.com/">Pretty Minimal</a> <span class="divider">|</span> <a href="http://dariuszsikorski.pl/" class="author">Dariusz Sikorski</a></p>
       </div>
     </section>
     <script src="./pages/assets/js/plugins-dist.js" type="text/javascript"></script>
