--- a/README.html
+++ b/README.html
@@ -29,3 +29,4 @@ to be used as sass mixins, leaving html code as clean as possible.</p>
 </ul>
 <h2 id="copyright-and-license">Copyright and license</h2>
 <p>Code and documentation copyright 2014-2016 Dariusz Sikorski &amp; authors of used plugins.</p>
+<p>Code released under the MIT license (same as Bootstrap or jQuery). See LICENSE.md file.</p>
