--- a/README.html
+++ b/README.html
@@ -7,7 +7,13 @@
 <li><a href="https://github.com/dariuszsikorski/csstetic/tree/master/dist">download</a></li>
 <li><a href="http://prettyminimal.com/csstetic/docs/#installation">installation</a></li>
 </ul>
-<h2 id="what-s-this-">What&#39;s this?</h2>
+<h2 id="installation">Installation</h2>
+<p><a href="https://github.com/dariuszsikorski/Csstetic/tree/master/dist">Download</a></p>
+<h3 id="classic">Classic</h3>
+<pre><code>&lt;link href=&quot;style/csstetic.css&quot; rel=&quot;stylesheet&quot;&gt;
+</code></pre><h3 id="semantic">Semantic</h3>
+<pre><code>@import &quot;style/_csstetic-semantic&quot;;
+</code></pre><h2 id="what-s-this-">What&#39;s this?</h2>
 <p>This is source code of csstetic framework which I developed
 as a personal project and now share it for public usage.</p>
 <p>In simple words - it&#39;s a stylesheet like bootstrap and is intended
@@ -22,7 +28,7 @@ to be used as sass mixins, leaving html code as clean as possible.</p>
 <li><em>_helpers</em> - helpful files during development</li>
 <li><em>assets</em> - csstetic website assets</li>
 <li><em>demos</em> - demonstration files used as resizable iframes in docs</li>
-<li><em>dist</em> - ready to use version of framework</li>
+<li><em>dist</em> - download compiled files</li>
 <li><em>docs</em> - html documentation files</li>
 <li><em>example</em> - unfinished example of framework usage</li>
 <li><em>pages/assets</em> - css and js assets for website</li>
