--- a/README.html
+++ b/README.html
@@ -7,18 +7,18 @@
 <li><a href="https://github.com/dariuszsikorski/csstetic/tree/master/dist">download</a></li>
 <li><a href="http://prettyminimal.com/csstetic/docs/#installation">installation</a></li>
 </ul>
+<h2 id="what-s-this-">What&#39;s this?</h2>
+<p>In simple words - it&#39;s a css framework like bootstrap and is intended
+to be used with sass / css style. Made to leave html code as clean as possible.</p>
+<p>This is source code of csstetic framework which I developed
+as a personal project and now share it for public usage.</p>
 <h2 id="installation">Installation</h2>
 <p><a href="https://github.com/dariuszsikorski/Csstetic/tree/master/dist">Download</a></p>
 <h3 id="classic">Classic</h3>
 <pre><code>&lt;link href=&quot;style/csstetic.css&quot; rel=&quot;stylesheet&quot;&gt;
 </code></pre><h3 id="semantic">Semantic</h3>
 <pre><code>@import &quot;style/_csstetic-semantic&quot;;
-</code></pre><h2 id="what-s-this-">What&#39;s this?</h2>
-<p>This is source code of csstetic framework which I developed
-as a personal project and now share it for public usage.</p>
-<p>In simple words - it&#39;s a stylesheet like bootstrap and is intended
-to be used as sass mixins, leaving html code as clean as possible.</p>
-<h2 id="contribution">Contribution</h2>
+</code></pre><h2 id="contribution">Contribution</h2>
 <p>I appreciate every kind word and contribution.</p>
 <p>Feel free to let me know if you use this project and appreciated it.</p>
 <h2 id="folders">Folders</h2>
